--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.19.0",
     "typescript": "^4.1.3"
   }
