--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "raw-loader": "^4.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-use-dimensions": "^1.2.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
