--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/styled-components": "^5.1.7",
     "framer-motion": "^3.3.0",
     "markdown-yaml-metadata-parser": "^3.0.0",
