--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "raw-loader": "^4.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-markdown": "^5.0.3",
     "react-use-dimensions": "^1.2.1",
     "styled-components": "^5.2.1"
   },
