--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.7",
     "focus-trap-react": "^8.4.2",
     "framer-motion": "^3.3.0",
+    "googleapis": "^126.0.1",
     "markdown-yaml-metadata-parser": "^3.0.0",
     "next": "10.0.6",
     "raw-loader": "^4.0.2",
