--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "framer-motion": "^3.3.0",
     "googleapis": "^126.0.1",
     "markdown-yaml-metadata-parser": "^3.0.0",
-    "next": "10.0.6",
+    "next": "^13.4.19",
     "raw-loader": "^4.0.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^5.0.3",
     "react-use-dimensions": "^1.2.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.22",
+    "@types/node": "^18.0.0",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.19.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.9.5"
   }
 }
